manifests/dev/metabase/Service-metabase.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metabase
    chart: metabase-2.27.6
    heritage: Helm
    release: metabase
  name: metabase
  namespace: metabase
spec:
  ports:
    - name: metabase
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: metrics
      port: 9191
      protocol: TCP
      targetPort: 9191
  selector:
    app: metabase
    release: metabase
  type: ClusterIP
