manifests/dev/metabase/Ingress-metabase.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: metabase
    chart: metabase-2.27.6
    heritage: Helm
    release: metabase
  name: metabase
  namespace: metabase
spec:
  ingressClassName: traefik
  rules:
    - host: metabase.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: metabase
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - metabase.home.kronkltd.net
      secretName: metabase-tls
